// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarLink render default 1`] = `
<div
  className="sc-AxirZ jjcDso"
>
  <div
    data-mock="NavLink"
  >
    {
  "className": "nav-link",
  "to": "/test-link",
  "exact": false
}
  </div>
</div>
`;

exports[`NavbarLink should render button 1`] = `
<div
  className="sc-AxirZ jjcDso"
>
  <button
    className="sc-AxjAm sc-AxiKw ayMow nav-link"
  />
</div>
`;

exports[`NavbarLink should render exact 1`] = `
<div
  className="sc-AxirZ jjcDso"
>
  <div
    data-mock="NavLink"
  >
    {
  "className": "nav-link",
  "to": "/test-link",
  "exact": true
}
  </div>
</div>
`;
